# intelligent-housing-search

./: README.md
backend/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 08497592847f_.py  34b2d19f4780_.py  38d52768987c_.py  48e2da53094c_.py  68173225a69b_add_fields.py  72be85915844_.py  77f08563e2a2_.py  a81a342260a9_.py  d257dbe2e00c_.py  d89748402d9f_.py
backend/src/: cache.py  config.py  main.py  models.py
backend/src/auth/: dependencies.py  exceptions.py  manager.py  models.py  router.py  schemas.py  strategy.py
backend/src/geodata/: city_infra.py  parser.py  router.py  state.py  test.py  utils.py  weather.py
backend/src/listings/: models.py  router.py  schemas.py  service.py
backend/src/locations/: models.py  service.py
frontend/housing-app/: README.md  angular.json  package-lock.json  package.json
frontend/housing-app/public/: objects.json
frontend/housing-app/src/: styles.css
frontend/housing-app/src/app/: app.config.ts  app.routes.ts  app.ts
frontend/housing-app/src/app/auth/: access.guard.ts  auth.interceptor.ts  auth.interface.ts  auth.service.ts
frontend/housing-app/src/app/common-ui/button/: button.css  button.html
frontend/housing-app/src/app/common-ui/footer/: footer.component.css  footer.component.html
frontend/housing-app/src/app/common-ui/header/: header.component.css  header.component.ts  (+1 more)
frontend/housing-app/src/app/data/: regions.ts
frontend/housing-app/src/app/models/: apartment.model.ts
frontend/housing-app/src/app/services/: apartments.service.ts
(+23 files in other folders)
